--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,50 @@ services:
     environment:
       KAFKA_BROKERS: kafka:29092
 
+  spark-master:
+    image: apache/spark:4.0.1-scala2.13-java17-python3-r-ubuntu
+    container_name: spark-master
+    hostname: spark-master
+    environment:
+      - SPARK_MASTER_HOST=spark-master
+      - SPARK_MASTER_PORT=7077
+      - SPARK_NO_DAEMONIZE=true 
+    ports:
+      - "8081:8080"   # master WEB UI
+      - "7077:7077"   # master port / Spark master RPC
+    command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.master.Master", "--host", "0.0.0.0"]
+    networks:
+      - spark-net
+  
+  spark-worker:
+    image: apache/spark:4.0.1-scala2.13-java17-python3-r-ubuntu
+    container_name: spark-worker
+    hostname: spark-worker
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_WORKER_CORES=1
+      - SPARK_WORKER_MEMORY=1g
+      - SPARK_NO_DAEMONIZE=true
+    command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077", "--host", "0.0.0.0"]
+    ports:
+      - "8082:8081"
+    networks:
+      - spark-net
+
+  # spark-client:
+  #   image: apache/spark:4.0.1-scala2.13-java17-python3-r-ubuntu
+  #   container_name: spark-client
+  #   hostname: spark-client
+  #   depends_on:
+  #     - spark-master
+  #   volumes:
+  #     - ./app:/opt/app
+  #   working_dir: /opt/app
+  #   entrypoint: ["/bin/bash", "-c"]
+  #   tty: true
+  #   networks:
+  #     - spark-net
 
   data_generation:
     container_name: data_generation
@@ -44,3 +88,8 @@ services:
       - ./services/data_generation/.env
     depends_on:
       - kafka
+
+networks:
+  spark-net:
+    driver: bridge
+  
